# gtcrn_for_esp32

./: .gitignore
apps/: gtcrn_rknn_realtime_tk.py  run_gtcrn_rknn_realtime_tk.sh
checkpoints/: model_finetuned_dns3_paired.tar
cpp_gtcrn/: CMakeLists.txt  benchmark_gtcrn.cpp  gtcrn_model.cpp  gtcrn_model.h  gtcrn_weights_dns3.h  offline_gtcrn.cpp  realtime_gtcrn_alsa.cpp
cpp_gtcrn/webui/: index.html  server.py  styles.css
esp32s3_gtcrn/: CMakeLists.txt  host_offline_embedded.cpp  host_validate.cpp  sdkconfig.old
esp32s3_gtcrn/common/: gtcrn_embedded_model.h
esp32s3_gtcrn/main/: CMakeLists.txt  main.cpp
finetune/: README.md  __init__.py  config.yaml  evaluate.py  export_candidate.sh  metrics.py  model.py  resume_force_epochs.sh  run_finetune.sh  run_train_from_scratch.sh  test_finetune.py  train.py  verify_stream_equivalence.py
gtcrn_added/: EXPORT_NOTES.md  image.md
gtcrn_added/cpp_gtcrn/: gtcrn_weights_dns3_finetuned.h  realtime_gtcrn.cpp
gtcrn_added/cpp_gtcrn/webui/: app.js  run_webui.sh
gtcrn_added/esp32s3_gtcrn/: README.md  partitions.csv  sdkconfig  sdkconfig.defaults
gtcrn_added/esp32s3_gtcrn/common/: gtcrn_embedded_model.cpp
gtcrn_added/esp32s3_gtcrn/main/: idf_component.yml
gtcrn_added/finetune/: data.py  export.py  losses.py
gtcrn_added/tools/rknn/: convert_gtcrn_stream_onnx_to_rknn.py  export_gtcrn_stream_onnx_4d.py  run_gtcrn_rknn_pc_sim.py
tools/cpp_gtcrn/: export_cpp_gtcrn_assets.py
tools/rknn/: benchmark_gtcrn_rknnlite.py  compare_gtcrn_stream_onnx.py  export_gtcrn_stream_onnx_4d_nodeconv.py  make_gtcrn_stream_4d_quant_dataset.py
